--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,19 +1,11 @@
-<% provide(:title, "About") %>
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>About | Ruby on Rails Tutorial Sample App</title>
-  </head>
-  <body>
-    <h1>About</h1>
-    <p>
-      The <a href="https://www.railstutorial.org/"><em>Ruby on Rails
-      Tutorial</em></a> is a
-      <a href="https://www.railstutorial.org/book">book</a> and
-      <a href="http://screencasts.railstutorial.org/">screencast series</a>
-      to teach web development with
-      <a href="http://rubyonrails.org/">Ruby on Rails</a>.
-      This is the sample application for the tutorial.
-    </p>
-  </body>
-</html>
+<% provide(:title, t(".about")) %>
+<h1><%= t ".about" %></h1>
+<p>
+  <%= t ".title4" %> <a href="https://www.railstutorial.org/about">https://www.railstutorial.org/about</a>
+  <%= t ".title1" %>
+  <%= t ".title5" %>
+  <a href="https://www.railstutorial.org/book">book</a> <%= t ".title6" %>
+  <a href="http://screencasts.railstutorial.org/">screencast series</a> <%= t ".title2" %>
+  <a href="http://rubyonrails.org/">Ruby on Rails</a>.
+  <%= t ".title3" %>
+</p>
