--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Help | Ruby on Rails Tutorial Sample App</title>
-  </head>
-  <body>
-    <h1>Help</h1>
-    <p>
-      Get help on the Ruby on Rails Tutorial at the
-      <a href="https://www.railstutorial.org/help">Rails Tutorial help
-      page</a>.
-      To get help on this sample app, see the
-      <a href="https://www.railstutorial.org/book"><em>Ruby on Rails
-      Tutorial</em> book</a>.
-    </p>
-  </body>
-</html>
+<% provide(:title, t(".help")) %>
+<h1><%= t ".help" %></h1>
+<p>
+  <%= t ".title1" %>
+  <a href="https://www.railstutorial.org/help">https://www.railstutorial.org/help</a> <%= t ".title2" %>
+  <%= t ".title3" %>
+  <a href="https://www.railstutorial.org/book">https://www.railstutorial.org/book</a>
+</p>
