--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,24 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t(".title2"), root_path %></li>
         <li><%= link_to t(".title3"), help_path %></li>
-        <li><%= link_to t(".title4"), signup_path %></li>
+        <% if logged_in? %>
+          <li><%= link_to t(".title5"), "#" %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t ".title6" %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t(".title7"), current_user %></li>
+              <li><%= link_to t(".title8"), "#" %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t(".title9"), logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t(".title4"), login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
