--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,16 @@
 <% provide :title, t(".home") %>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render "shared/user_info" %>
+      </section>
+      <section class="micropost_form">
+        <%= render "shared/micropost_form" %>
+      </section>
+    </aside>
+  </div>
+<% else %>
 <div class="center jumbotron">
   <h1><%= t ".welcome" %></h1>
   <h2>
@@ -10,3 +22,4 @@
 </div>
 <%= link_to image_tag("rails.png", alt: t(".title")), t(".link1") %>
 <%= link_to image_tag("kitten.png", alt: t(".title1")), t(".link2") %>
+<% end %>
