--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,10 @@
-<h1>User#password_reset</h1>
+<h1><%= t "pwd_reset" %></h1>
 
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
-</p>
+<p><%= t "click_reset" %></p>
+
+<%= link_to t("reset_pwd"), edit_password_reset_url(@user.reset_token,
+  email: @user.email) %>
+
+<p><%= t "hours" %></p>
+
+<p><%= t "if_pwd" %></p>
