--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,29 @@
 <% provide :title, t(".home") %>
-<div class="center jumbotron">
-  <h1><%= t ".welcome" %></h1>
-  <h2>
-    <%= t ".page" %>
-    <%= link_to t(".ruby"), t(".link") %>
-    <%= t ".sample" %>
-  </h2>
-<%= link_to t(".sign"), signup_path, class: "btn btn-lg btn-primary" %>
-</div>
-<%= link_to image_tag("rails.png", alt: t(".title")), t(".link1") %>
-<%= link_to image_tag("kitten.png", alt: t(".title1")), t(".link2") %>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render "shared/user_info" %>
+      </section>
+      <section class="micropost_form">
+        <%= render "shared/micropost_form" %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3><%= t "feed" %></h3>
+      <%= render "shared/feed" %>
+    </div>
+  </div>
+<% else %>
+  <div class="center jumbotron">
+    <h1><%= t ".welcome" %></h1>
+    <h2>
+      <%= t ".page" %>
+      <%= link_to t(".ruby"), t(".link") %>
+      <%= t ".sample" %>
+    </h2>
+    <%= link_to t(".sign"), signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
+  <%= link_to image_tag("rails.png", alt: t(".title")), t(".link1") %>
+  <%= link_to image_tag("kitten.png", alt: t(".title1")), t(".link2") %>
+<% end %>
